# ObjectMD

./: Makefile  README.md  environment.yml  pyproject.toml
ObjectMD/: Visualization.py  __init__.py  dataset.py  feature_extraction.py  features.py  frames.py  is_moving.py  object_detection.py  plots.py  pose_estimation.py  resolution.py  sample_frames.py  test.py  train.py
ObjectMD/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: box_movement_xgb.pkl
runs/detect/train/: args.yaml  results.csv
