[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ObjectMD"
version = "0.0.1"
description = "creating an object moving detection for a store box"
authors = [
  { name = "Djames Eddine" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["ObjectMD"]
include = ["pyproject.toml", "ObjectMD/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ObjectMD"]
force-sort-within-sections = true

